--- a/catalogue/cmip6/DKRZ-MPI-ESM1-2-HR-historical-r1i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/DKRZ-MPI-ESM1-2-HR-historical-r1i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
@@ -6,36 +6,42 @@ steps:
     check_files: false
     retries: 3
     filename_or_obj:
-      #"project": CMIP
+      "project": CMIP6
+      "data_node": esgf3.dkrz.de
       "experiment_id": historical
+      #"institution_id": DKRZ # for some reason institution_id is MPI-M instead of DKRZ
+      "institution_id": MPI-M
       "source_id": MPI-ESM1-2-HR
-      "frequency": ["fx"] #"day",
+      "frequency": ["fx", "day"]
+      "table_id": ["fx", "day"]
+      "realm": "atmos"
       "variable_id": [
-        #"hursmin",
-        #"hursmax",
-        #"prc",
-        #"hfls",
-        #"hfss",
-        #"rsus",
-        #"rlus",
-        #"rlds",
-        #"rsds",
-        #"rlut",
-        #"clt",
-        #"vas",
-        #"uas",
-        #"tas",
-        #"tasmin",
-        #"tasmax",
-        #"sfcWindmax",
-        #"sfcWind",
-        #"psl",
-        #"prsn",
-        #"pr",
-        ##"hurs",
-        #"huss",
-        #"areacella",
-        "sftlf"
+        "areacella",
+        "sftlf",
+
+        "hursmin",
+        "hursmax",
+        "prc",
+        "hfls",
+        "hfss",
+        "rsus",
+        "rlus",
+        "rlds",
+        "rsds",
+        "rlut",
+        "clt",
+        "vas",
+        "uas",
+        "tas",
+        "tasmin",
+        "tasmax",
+        "sfcWindmax",
+        "sfcWind",
+        "psl",
+        "prsn",
+        "pr",
+        "hurs",
+        "huss",
       ]
       "variant_label": r1i1p1f1
       "grid_label": gn
@@ -43,7 +49,7 @@ steps:
     index_node: esgf.ceda.ac.uk
   chunks: {time: 720, lat: 64, lon: 64}
   to_zarr_kwargs: {
-    store: s3://edh-root/cmip6/DKRZ-MPI-ESM1-2-HR-historical-r1i1p1f1-day-gn-v0.zarr,
+    store: s3://edh-root/cmip6/DKRZ-MPI-ESM1-2-HR-historical-r1i1p1f1-day-gn-v0-test.zarr,
     storage_options: {
       client_kwargs: { endpoint_url: https://s3.gra.io.cloud.ovh.net }
     }
