--- a/catalogue/cmip6/NCC-NorESM2-MM-historical-r1i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/NCC-NorESM2-MM-historical-r1i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
@@ -7,30 +7,32 @@ steps:
     retries: 3
     filename_or_obj:
       "project": CMIP6
+      "institution_id": NCC
       "experiment_id": historical
       "source_id": NorESM2-MM
       "frequency": ["day", "fx"]
-      "table_id": ["day"]
+      "table_id": ["day", "fx"]
+      #"realm": atmos
       "variable_id": [
+        "sftlf",
+        "areacella",
+
         "hfls",
         "hfss",
         "clt",
         "rlds",
         "rlus",
         "rsus",
-        "sftlf",
-
-        #"areacella"
-        #"tas",
-        #"tasmin",
-        #"tasmax",
-        #"sfcWind",
-        #"rsds",
-        #"psl",
-        #"prc",
-        #"pr",
-        #"hurs",
-        #"huss",
+        "tas",
+        "tasmin",
+        "tasmax",
+        "sfcWind",
+        "rsds",
+        "psl",
+        "prc",
+        "pr",
+        "hurs",
+        "huss",
       ]
       "variant_label": r1i1p1f1
       "grid_label": gn
@@ -38,7 +40,7 @@ steps:
     index_node: esgf.ceda.ac.uk
   chunks: {time: 720, lat: 32, lon: 72}
   to_zarr_kwargs: {
-    store: s3://edh-root/cmip6/NCC-NorESM2-MM-historical-r1i1p1f1-day-gn-v0.zarr,
+    store: s3://edh-root/cmip6/NCC-NorESM2-MM-historical-r1i1p1f1-day-gn-v0-setup.zarr,
     storage_options: {
       client_kwargs: { endpoint_url: https://s3.gra.io.cloud.ovh.net }
     }
