--- a/catalogue/cmip6/EC-Earth3-CC-ScenarioMIP-r1i1p1f1-day-gr/ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/EC-Earth3-CC-ScenarioMIP-r1i1p1f1-day-gr/ingestion/ingest-from-esgf-v0.yaml
@@ -10,7 +10,11 @@ steps:
       "experiment_id": ['ssp245', 'ssp585']
       "source_id": EC-Earth3-CC
       "frequency": ["day", "fx"]
+      "table_id": [ "fx", "day" ]
+      #"realm": "atmos"
       "variable_id": [
+        "areacella",
+
         "sfcWindmax",
         "sfcWind",
         "rsus",
@@ -20,19 +24,17 @@ steps:
         "clt",
         "tasmax",
         "tasmin",
-
-        #"areacella",
-        #"pr",
-        #"tas",
-        #"hurs",
-        #"huss",
-        #"psl",
-        #"uas",
-        #"vas",
-        #"rsds",
-        #"rlut",
-        #"rlus",
-        #"rlds"
+        "pr",
+        "tas",
+        "hurs",
+        "huss",
+        "psl",
+        "uas",
+        "vas",
+        "rsds",
+        "rlut",
+        "rlus",
+        "rlds"
       ]
       "variant_label": r1i1p1f1
       "grid_label": gr
